--- a/Webpack/package.json
+++ b/Webpack/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "",
     "build": "webpack --progress --colors --config webpack.config.js"
   },
   "author": "",
