--- a/Webpack/package.json
+++ b/Webpack/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "",
-    "build": "webpack --progress --colors --config webpack.config.js"
+    "dev": "webpack-dev-server --open --config webpack.dev.js",
+    "build": "webpack --progress --colors --config webpack.prod.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,17 +17,30 @@
     "@babel/runtime": "^7.9.2",
     "autoprefixer": "^9.7.5",
     "babel-loader": "^8.1.0",
-    "css-loader": "^3.4.2",
+    "babel-plugin-import": "^1.13.3",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.6.0",
+    "cssnano": "^4.1.10",
     "file-loader": "^6.0.0",
     "html-loader": "^1.0.0",
     "html-webpack-plugin": "^4.0.3",
     "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^5.0.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-loader": "^3.0.0",
+    "sass-loader": "^11.0.1",
     "style-loader": "^1.1.3",
     "url-loader": "^4.0.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
     "webpack-merge": "^4.2.2"
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8",
+    "ios > 7"
+  ]
 }
