--- a/frontend/webpack/package.json
+++ b/frontend/webpack/package.json
@@ -32,7 +32,7 @@
     "style-loader": "^1.1.3",
     "url-loader": "^4.0.0",
     "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.10.3",
     "webpack-merge": "^4.2.2"
   },
@@ -42,5 +42,9 @@
     "last 2 versions",
     "not ie <= 8",
     "ios > 7"
-  ]
+  ],
+  "dependencies": {
+    "gitmoji-cli": "^4.0.0",
+    "normalize.css": "^8.0.1"
+  }
 }
