--- a/.yarnrc
+++ b/.yarnrc
@@ -1,2 +1,2 @@
-registry=https://registry.npm.taobao.org
-sass-binary-site=https://npm.taobao.org/mirrors/node-sass
+registry=https://registry.npmmirror.com/
+# sass-binary-site=https://registry.npmmirror.com/mirrors/node-sass
